<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">Desno365\'s Mods</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_info">About</string>
    <string name="action_help">Help</string>
    <string name="action_share">Share</string>
    <string name="share_using">Share using&#8230;</string>
    <string name="share_body">I\'m using the \"Desno365\'s Mods\" app to download and use some incredible Minecraft Pocket Edition Mods! Check it out http://bit.ly/DesnoMods</string>
    <string name="action_feedback">Feedback</string>
    <string name="action_rate">Rate this app</string>
    <string name="action_settings">Settings</string>
    <string name="close_dialog">Close</string>
    <string name="made_by">This App was made with Love by Desno365</string>
    <string name="follow_me">Follow me on Twitter</string>
    <string name="source_code">Get the source code of this app</string>
    <string name="support_me">Do you have an idea on how to improve this app?\nContact me on Twitter!\n\nIf you would like to support me please rate this app 5 stars on the Google Play Store. This will help me to make new fantastic mods! Thanks :)</string>
    <string name="take_me_play_store">Take me to Play Store</string>
    <string name="contributors_title">Contributors</string>
    <string name="contributors_content">A big thanks to all the people who contributed to the project, by translating it or by helping me! Here the list of the people who contributed: http://desno365.github.io/minecraft/desno365-mods-app/credits/</string>
    <string name="used_libraries_title">Used libraries and images</string>
    <string name="used_libraries_content" translatable="false">PagerSlidingTabStrip https://github.com/jpardogo/PagerSlidingTabStrip\nTooltip https://github.com/sephiroth74/android-target-tooltip\nPhotoView https://github.com/chrisbanes/PhotoView\nAnimatedExpandableListView https://github.com/idunnololz/AnimatedExpandableListView\nandroid-shapeLoadingView https://github.com/zzz40500/android-shapeLoadingView\nAndroidViewAnimations https://github.com/daimajia/AndroidViewAnimations\nFlatWoken icons https://github.com/alecive/FlatWoken</string>
    <string name="info_title">Information</string>
    <string name="features_title">Features</string>
    <string name="updates_title">Updates</string>
    <string name="compatibility_title">Compatibility</string>
    <string name="changelog_title">Changelog</string>
    <string name="useful_links_title">Useful links</string>
    <string name="loading">Loading&#8230;</string>
    <string name="mods">Mods</string>
    <string name="latest_version_is">The latest version is:</string>
    <string name="mod_compatibility_content">Compatible Minecraft PE versions:</string>
    <string name="internet_error">There was an error while checking for updates, please check your internet connection.</string>
    <string name="show_changelog">Show all the changelog&#8230;</string>
    <string name="hide_changelog">Hide the changelog&#8230;</string>
    <string name="minecraft_thread">minecraftforum.net thread</string>
    <string name="instruction_for_installing">Read the instructions for installing</string>
    <string name="installation_video_tutorial">Watch the installation video tutorial</string>
    <string name="download_mod_from_website">Download this mod from Desno\'s website</string>
    <string name="download_map_from_website">Download this map from Desno\'s website</string>
    <string name="home_title" translatable="false">Home</string>
    <string name="welcome_title">Welcome</string>
    <string name="welcome_content">Welcome to the Desno365\'s Mods app.\nHere you can check the latest version and the changelog of all my mods.</string>
    <string name="minecraft_version_title">MCPE version</string>
    <string name="minecraft_version_content">Installed version: Minecraft PE %1$s</string>
    <string name="minecraft_not_installed">Minecraft PE not installed</string>
    <string name="news_title">News</string>
    <string name="news_button">Take me to the news page</string>
    <string name="need_help_title">Need help?</string>
    <string name="help_button">Take me to the help page</string>
    <string name="click_image_to_view">Click any image in this page to view it in full resolution.</string>
    <string name="zoom_image_showcase_title">Image zoom</string>
    <string name="what_you_need_title">What you need to use mods</string>
    <string name="what_you_need_content">You need two apps: Minecraft Pocket Edition (the full version, the demo doesn\'t work with mods) and BlockLauncher (the free version or the pro version).</string>
    <string name="get_it_store">Get it on the Play Store</string>
    <string name="how_to_prepare_mods_title">How to prepare mods</string>
    <string name="how_to_prepare_mods_download">First download the mod that you want to use. To download the mod you can press the \"Download this mod from Desno\'s website\" button to go to the website where you can download the mod, remember to read carefully the \"Instructions\" section in the website (mods have a different installation method).</string>
    <string name="how_to_prepare_mods_file_manager">Usually mods are inside a zip file so you will need a File Manager to extract it (there are a lot of file managers available on the Google Play Store).</string>
    <string name="get_one_store">Get one on the Play Store</string>
    <string name="how_to_prepare_mods_extract">Extracting is really easy: you have to go to the \"Download\" folder with your file manager, click the .zip file that contains everything you need to use the mod (usually the icon of the .zip file is an archive) and then extract it.</string>
    <string name="how_to_prepare_mods_after_extraction">This is an example of the Portal 2 Mod zip file after extraction:</string>
    <string name="how_to_install_mods_title">How to install mods</string>
    <string name="how_to_install_mods_manage_modpe_scripts">Now that you did all the previous steps you can open BlockLauncher, click the \"Settings\" icon and go to \"Manage ModPE Scripts\".</string>
    <string name="how_to_install_mods_import">Make sure the switch in the upper right is ON and click the \"Import\" button.</string>
    <string name="how_to_install_mods_from_local_storage">Import the script from local storage (the script is the .js file that you should have found in the .zip file).</string>
    <string name="how_to_install_texture_pack_title">How to install a texture pack</string>
    <string name="how_to_install_texture_pack_launcher_options">Some mods inside the .zip file have a texture pack.\nTo install it open BlockLauncher, click the \"Settings\" icon and go to \"Launcher options\".</string>
    <string name="how_to_install_texture_pack_texture_pack">Go in the \"Texture Pack\" section and make sure the switch in the upper right is ON.</string>
    <string name="how_to_install_texture_pack_select_texture_pack">Then press the \"Select\" button and choose the texture pack that was extracted from the first .zip file.</string>
    <string name="mod5_title" translatable="false">DesnoGuns Mod</string>
    <string name="info_content_tab6">Guns. Weapons. Explosions. This is the DesnoGuns Mod! :D</string>
    <string name="mod1_title" translatable="false">Portal 2 Mod</string>
    <string name="info_content_tab2">This mod tries to bring the features of the famous PC game “Portal” in Minecraft Pocket Edition.\nWith this mod you can craft the Portal Gun and then shoot!\nYou can teleport yourself everywhere with these portals.\nThere are five different Portal Guns with different characteristics.\nIn this mod you can find also other items taken from the game “Portal”: Long Fall Boots, Jumpers, Gels. And many other features will come out in future updates.</string>
    <string name="mod2_title" translatable="false">Laser Mod</string>
    <string name="features_content_tab3">• The laser of the Laser Gun destroys the block that you are looking.\n• The Laser Bazooka shoot a laser bullet that will explode when it touches the ground.\n• The Laser Sniper Rifle shoot a laser bullet that kill almost every mob it hit.\n• Tap the settings icon to open the UI with Information and Settings for the mod.\n• There are a lot of settings for the weapons, so you can personalize them.\n• You can find the Laser Weapons also in the creative inventory.</string>
    <string name="mod3_title" translatable="false">Turrets Mod</string>
    <string name="features_content_tab4">• Craft a turret and place it where you want, then make it aggressive with the “Turret options” item and the turret will start to shoot every selected mob that come in his range.\n• There is an option to change the name of the turret.\n• Protect your home with your turrets! ;)</string>
    <string name="mod4_title" translatable="false">Jukebox Mod</string>
    <string name="features_content_tab5">• There are twelve different discs with twelve different songs (songs are ported from Minecraft PC).\n• Tap the jukebox with a disc and it will start playing the chosen song.\n• Greater the distance between you and the Jukebox, lower the volume of it.\n• Support multiple jukeboxes that play simultaneously.\n• There is a random chance of finding a disc every 30 kills of hostile mobs.\n• Tap the Jukebox to eject the disc. When the song ends the disc will be ejected automatically.\n• The Jukebox block and the discs are also in the creative inventory.\n• The crafting recipes of the Jukebox are the same of the PC version.</string>
    <string name="mod6_title" translatable="false">Unreal Geometry Map</string>
    <string name="info_content_tab7">This map and the mod attached bring the Non-Euclidean geometry on your mobile device!\nExperience the craziness of an unreal world, in a normal/Euclidean game like Minecraft.\nWords can\’t explain in a good way what this map has.\nTry it, you\'ll see.</string>
    <string name="connection_settings">Connection</string>
    <string name="refresh_on_start_title">Refresh on start</string>
    <string name="refresh_on_start_summary">Refresh the content on app start</string>
    <string name="updates_settings">Updates and notifications</string>
    <string name="notification_bool_mods_title">Notifications for mods updates</string>
    <string name="notification_bool_mods_summary">Receive notifications for new mods updates</string>
    <string name="notification_bool_news_title">Notifications for news</string>
    <string name="notification_bool_news_summary">Receive notifications for news</string>
    <string name="pref_sync_frequency_title">Check for updates frequency</string>
    <string name="pref_sync_frequency_summary">Set the frequency for checking updates</string>
    <string name="language_settings">Language</string>
    <string name="language_title">Set language</string>
    <string name="language_summary">Select app\'s language</string>
    <string name="help_translating_title">Help translating</string>
    <string name="help_translating_summary">Collaborate to this project and help translating the app</string>
    <string name="customization_settings">Customization</string>
    <string name="themes_title">Theme</string>
    <string name="themes_summary">Select app\'s theme</string>
    <string name="animations_title">Animations</string>
    <string name="animations_summary">Select app\'s animations</string>
    <string name="help_settings">Tips and help</string>
    <string name="restore_tips_title">Restore suggestions</string>
    <string name="restore_tips_summary">Restore tips and suggestions in the Help page</string>
    <string name="statistics_settings">Anonymous statistics</string>
    <string name="anonymous_statistics_title">App usage statistics</string>
    <string name="anonymous_statistics_summary">Allow anonymous tracking of errors and general usage</string>
</resources>