<?xml version="1.0" encoding="utf-8"?>
<!--
  ~
  ~ Copyright 2017 Dennis Motta
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <PreferenceCategory android:title="@string/updates_settings" >

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="notification_bool_mods"
            android:summary="@string/notification_bool_mods_summary"
            android:title="@string/notification_bool_mods_title" >
        </CheckBoxPreference>

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="notification_bool_news"
            android:summary="@string/notification_bool_news_summary"
            android:title="@string/notification_bool_news_title" >
        </CheckBoxPreference>

        <ListPreference
            android:key="sync_frequency"
            android:entries="@array/sync_frequency"
            android:title="@string/pref_sync_frequency_title"
            android:summary="@string/pref_sync_frequency_summary"
            android:entryValues="@array/sync_frequency_values" />

    </PreferenceCategory>


    <PreferenceCategory android:title="@string/language_settings" >

        <ListPreference
            android:key="selected_language"
            android:entries="@array/languages"
            android:title="@string/language_title"
            android:summary="@string/language_summary"
            android:entryValues="@array/languages_values" />

        <Preference android:title="@string/help_translating_title"
                    android:summary="@string/help_translating_summary"
                    android:key="help_translating">
        </Preference>

    </PreferenceCategory>


    <PreferenceCategory android:title="@string/customization_settings" >

        <ListPreference
            android:key="selected_theme"
            android:entries="@array/themes"
            android:title="@string/themes_title"
            android:summary="@string/themes_summary"
            android:entryValues="@array/themes_values" />

        <ListPreference
            android:key="selected_animations"
            android:entries="@array/animations"
            android:title="@string/animations_title"
            android:summary="@string/animations_summary"
            android:entryValues="@array/animations_values" />

    </PreferenceCategory>


    <PreferenceCategory android:title="@string/statistics_settings" >

        <CheckBoxPreference
            android:defaultValue="true"
            android:title="@string/anonymous_statistics_title"
            android:summary="@string/anonymous_statistics_summary"
            android:key="anonymous_statistics">
        </CheckBoxPreference>

    </PreferenceCategory>


    <PreferenceCategory android:title="@string/help_settings" >

        <Preference
            android:title="@string/restore_tips_title"
            android:summary="@string/restore_tips_summary"
            android:key="restore_tips">
        </Preference>

    </PreferenceCategory>

</PreferenceScreen>